2010-03-24  Jakub Jelinek  <jakub@redhat.com>

	PR debug/19192
	PR debug/43479
	* cfgexpand.c (gimple_assign_rhs_to_tree): Also set TREE_BLOCK
	from gimple_block.
	* expr.c (expand_expr_real): Restore previous
	curr_insn_source_location and curr_insn_block after
	expand_expr_real_1 call.
	(expand_expr_real_1) <case SSA_NAME>: Call expand_expr_real
	instead of expand_expr_real_1.

2010-03-23  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/43413
	* ira-color.c (setup_allocno_available_regs_num): Count prohibited
	hard regs too.

2010-03-22  James E. Wilson  <wilson@codesourcery.com>

	PR target/43348
	* ia64.md (call_nogp, call_value_nogp, sibcall_nogp, call_gp,
	call_value_gp,sibcall_gp): Use 's' constraint not 'i'.

2010-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c (ix86_target_string): Fix a typo in comments.
	Add -mfma.

2010-03-22  Mike Stump  <mikestump@comcast.net>

	PR target/23071
	* config/rs6000/rs6000.c (darwin_rs6000_special_round_type_align):
	Don't overly align based upon packed packed fields.

2010-03-22  Jason Merrill  <jason@redhat.com>

	* c-pretty-print.c (pp_c_specifier_qualifier_list) [VECTOR_TYPE]:
	Use () rather than [], and move before the element type.

2010-03-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/configfiles.texi (Configuration Files): Removed
	fixinc/Makefile*, intl/Makefile.*.
	* doc/makefile.texi: Fixed markup.
	Abstract from version control system used.
	(Makefile): Removed obsolete gcc/java/parse.y example.
	* doc/sourcebuild.texi: Likewise.
	(Top Level): Added config, gnattools, libdecnumber, libgcc,
	libgomp, libssp.
	Removed fastjar.
	(Miscellaneous Docs): Clarify location.
	Added COPYING3, COPYING3.LIB.
	(Front End Directory): Moved Make-lang.in entry to new
	subsubsection.

2010-03-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/38085
	* config/i386/i386.c (x86_function_profiler)
	[!NO_PROFILE_COUNTERS]: Fix typo.